--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -122,9 +122,9 @@
 }
 @media (max-width: 768px) {
 .footer{
-  padding-left: 15px;
+  padding-left: 0;
   padding-top: 25px;
-  padding-right: 15px;
+  padding-right: 0;
 
 
 }
