--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -70,6 +70,8 @@ h4{
   font-size: 48px;
   font-weight: 700;
   text-transform: uppercase;
+  text-align: center;
+  line-height: 48px;
 }
 h5{
   color: #ffffff;
@@ -326,6 +328,10 @@ $color-button-hover: #f00;
     line-height: 45px;
     font-size: 40px;
   }
+  h2 {
+    line-height: 25px;
+    font-size: 20px;
+  }
 
 
   section {
@@ -398,4 +404,30 @@ zoom: 0.8;
 
   }
   
+}
+::-webkit-input-placeholder {
+  color: #bfbfbf;
+  font-family: Roboto;
+  font-size: 16px;
+}
+::-moz-placeholder{
+  color: #808080;
+  font-family: Roboto;
+  font-size: 16px;
+
+
+}/* Firefox 19+ */
+:-moz-placeholder {
+  color: #bfbfbf;
+  font-family: Roboto;
+  font-size: 16px;
+
+
+}/* Firefox 18- */
+:-ms-input-placeholder {
+  color: #808080;
+  font-family: Roboto;
+  font-size: 16px;
+
+
 }
